# IRISStar

./: .gitignore  GOOGLE_SEARCH_SETUP.md  IRISSTAR_FIXES_TRACKER.md  MODERNIZATION_PLAN.md  Readme.md  TODO.md  UI_IMPROVEMENT_PLAN.md  build.gradle.kts  crash_log.txt  defaultmodels.md  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts
app/schemas/com.nervesparks.iris.data.db.AppDatabase/: 2.json  3.json
app/src/androidTest/java/com/nervesparks/iris/ui/: ChatListScreenTest.kt  LanguageRestartNoticeTest.kt  MessageBubbleTest.kt  ModelSelectionModalTest.kt  TopAppBarTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: default_models.json
app/src/main/java/com/nervesparks/iris/: ChatScreen.kt  Downloadable.kt  IrisStarApplication.kt  MainActivity.kt  MainViewModel.kt  MainViewModel.kt.backup  Template.kt
app/src/main/java/com/nervesparks/iris/data/: AndroidSearchService.kt  ToolCall.kt  (+6 more)
app/src/main/res/drawable/: ic_quantize.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  network_security_config.xml
app/src/test/java/com/nervesparks/iris/: MainViewModelTest.kt
docs/: CERTIFICATE_PINNING.md  DEPENDENCY_VERSIONS.md  GOOGLE_SEARCH_SETUP.md  IRISSTAR_FIXES_TRACKER.md  MODERNIZATION_PLAN.md  UI_DESIGN_SYSTEM.md
gradle/: libs.versions.toml
llama/: build.gradle.kts
llama/src/main/cpp/: CMakeLists.txt  jni_utils.h  llama-android.cpp
llama/src/main/java/android/llama/cpp/: LLamaAndroid.kt
llama/src/test/cpp/: CMakeLists.txt  jni_utils_test.cpp
(+146 files in other folders)
